--- a/index.html
+++ b/index.html
@@ -10,15 +10,15 @@
     <p>
       <a class=link href="https://s3.amazonaws.com/codecademy-content/programs/freelance-one/excursion/index.html">Download Excursion (Coming soon!)</a>
     </p>
-    <video src="./resources/Videos/excursion.mp4" autoplay muted loop>
+    <video src="./resources/excursion.mp4" autoplay muted loop>
     </video>
     <h2>Your personal travel guide</h2>
     <h3>Excursion remembers places you like, and recommends new points of interest around you.</h3>
     <p>
-      <img src="./resources/images/camp.jpg" alt="camp">
+      <img src="./resources/camp.jpg" alt="camp">
     </p>
     <p>
-      <img src="./resources/images/phone.png" alt="phone">
+      <img src="./resources/phone.png" alt="phone">
     </p>
     <h1>Coming Soon for iPhone and Android</h1>
     <p>
