--- a/index.html
+++ b/index.html
@@ -2,15 +2,13 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Download Excursion</title>
+    <title>Christian Tet</title>
     <link href="./resources/css/index.css" type="text/css" rel="stylesheet">
   </head>
   <body>
-    <h1>Discover hidden places in the world around you</h1>
-    <p>
-      <a class=link href="https://s3.amazonaws.com/codecademy-content/programs/freelance-one/excursion/index.html">Download Excursion (Coming soon!)</a>
-    </p>
-    <video src="./resources/excursion.mp4" autoplay muted loop>
+    <h1>St.Galler Auffahrslauf 2017</h1>
+    <p></p>
+    <video src="./resources/auffahrtslauf.mp4" autoplay muted loop>
     </video>
     <h2>Your personal travel guide</h2>
     <h3>Excursion remembers places you like, and recommends new points of interest around you.</h3>
