--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Christian Tet</title>
+    <title>Christian Test</title>
     <link href="./resources/css/index.css" type="text/css" rel="stylesheet">
   </head>
   <body>
@@ -10,18 +10,5 @@
     <p></p>
     <video src="./resources/auffahrtslauf.mp4" autoplay muted loop>
     </video>
-    <h2>Your personal travel guide</h2>
-    <h3>Excursion remembers places you like, and recommends new points of interest around you.</h3>
-    <p>
-      <img src="./resources/camp.jpg" alt="camp">
-    </p>
-    <p>
-      <img src="./resources/phone.png" alt="phone">
-    </p>
-    <h1>Coming Soon for iPhone and Android</h1>
-    <p>
-      <a class=link href="https://s3.amazonaws.com/codecademy-content/programs/freelance-one/excursion/index.html">Download Excursion (Coming soon!)</a>
-    </p>
-    <h4>© Excursion</h4>
   </body>
 </html>
